fix: настройка логики